# SupersonicBuilder

./: .gitignore  .hotreload  .reload  .semgrep.yml  .supersonic_start.json  ADVANCED_RELEASE_FEATURES.md  BUILDER_COMPARISON.md  CHANGELOG.md  COMMUNITY_ENGAGEMENT_GUIDE.md  COMPLETE_DEPLOYMENT_SUMMARY.md  DEPLOY_UPGRADE_INSTRUCTIONS.md  Dockerfile  FINAL_AUDIT_REPORT.md  GPG_RELEASE_SETUP.md  INTEGRATION_QUICK_SUMMARY.txt  INTEGRATION_SUMMARY.txt  LICENSE  MAKEFILE_FIX_SUMMARY.md  MAKEFRAG.docs  MAKEFRAG.version_hint  Makefile  Makefile.append.print_all  Makefile.append.pro  Makefile.append.quickstart  Makefile.fullattack  Makefile.supersonic-release  Procfile  QUICKSTART.md  QUICK_DEPLOY.md  README-SUPERSONIC-OVERLAYS.md  README.md  README_PagesSmokeBadge_Addon.txt  README_SmokeTest_Addon.txt  RELEASE_COMMANDS_v2.0.9.txt  RELEASE_SUMMARY.txt  SECURITY_NOTE.txt  SMART_CI_GUIDE.md  SUPERSONIC_OVERLAYS_COMPLETE.md  SUPERSONIC_RELEASE_NOTES.md  SUPERSONIC_TOOLCHAIN_COMPLETE.md  (+59 more)
.github/: dependabot.yml  labels.yml  project_views.json  pull_request_template.md  release-drafter.yml  release.yml  required-assets.txt
.status/: docs-release-completeness.json
Founder_Seal/: BADGE_VS_SEAL.txt  INTEGRATION_EXAMPLES.md  SEAL_PREVIEW.txt
SupersonicBuilder/: .dockerignore  .gitignore  .pre-commit-config.yaml  .supersonic-sync.conf.example  .syncignore.example  AUTODEPLOY_GUIDE.md  AUTOMATION_COMPLETE.md  CI_CD_INTEGRATION.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  EXPORT_GUIDE.md  FINAL_STATUS.txt  GITHUB_PUSH_SOLUTION.md  HARMONY_SYNC_GUIDE.md  HEALTH_CHECK_SUMMARY.md  INFINITY_ARCHITECTURE.md  INFINITY_HARMONY_COMPLETE.md  INFINITY_QUICK_REFERENCE.md  INTEGRATION_COMPLETE.md  MAKEFRAG.support.mk  MANIFEST_GENERATOR_GUIDE.md  MEGA_INTEGRATION_COMPLETE.md  Makefile.append.local_release  Makefile.append.print  Makefile.append.release  Makefile.nextwave  Makefile.preflight  Makefrag.badges  QUICK_LAUNCH_COMMANDS.txt  QUICK_START.md  README-ADDONS.md  README-POLICY-AND-SIGNING-OVERLAYS.md  README-SECURITY-OVERLAYS.md  README-SLSA-SCORECARD-OVERLAYS.md  README_DocsCoverageBadge_Addon.txt  RELEASE_GUIDE.md  ROLLBACK_SYSTEM_README.md  SCHEDULER_ULTRA_GUIDE.md  SUPERSONIC_README.md  SUPERSONIC_V4_DOCTOR_TOOLS.md  (+60 more)
analytics/: app.py
apps/: README.md  app.py  database.py  manager.py  storage.py
attached_assets/: ENV_1762287912841.example  Pasted--Doctor-Endpoints-FastAPI-Flask-auto-mount-Routes-GET-health-live-app-system-h-1762290375580_1762290375580.txt  Pasted--script-function-const-btn-document-getElementById-syncNowBtn-const-chip-document-g-1762269740363_1762269740364.txt  Pasted--script-function-const-btn-document-getElementById-syncNowBtn-const-chip-document-g-1762269816325_1762269816325.txt  Pasted--tools-cards-yaml-version-1-title-CA5024VKB1-Field-Cards-subtitle-Heil-ICP-Supersonic-Quick-1762701018281_1762701018282.txt  Pasted--tools-release-now-sh-usr-bin-env-bash-set-euo-pipefail-BRANCH-BRANCH-main-PUSH-BRANCH-0-1762711675842_1762711675843.txt  Pasted--usr-bin-env-bash-set-euo-pipefail-Su-1762696860643_1762696860644.txt  Pasted--usr-bin-env-python3-Auto-build-supersonic-pkg-init-py-Rules-For-each-module-in-supers-1762224521425_1762224521425.txt  Pasted--usr-bin-env-python3-Collect-per-asset-historical-sizes-from-the-last-N-GitHub-releases-Outp-1762235470741_1762235470741.txt  Pasted--usr-bin-env-python3-Continuous-repo-health-docs-sync-for-SonicBuilderSupersonic-What-it-d-1762268879372_1762268879372.txt  Pasted--usr-bin-env-python3-Continuous-sync-service-for-Replit-GitHub-POST-api-sync-run-i-1762270969584_1762270969584.txt  (+60 more)
badges/: auto_healer_status.json
bass/: app.py  database.py  filters.py  phase.py  subwoofer.py  (+1 more)
(+1968 files in other folders)
