# SonicBuilder Supersonic — setup.cfg
# -----------------------------------
# Classic setuptools configuration for packaging metadata

[metadata]
name = sonicbuilder-supersonic
version = 3.2.1
author = Christopher Elgin
description = Automated build and verification system for the Chevy Sonic Android Head Unit project.
long_description = file: SUPERSONIC_README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/ChristopherElgin/SonicBuilderSupersonic
project_urls =
    Documentation = https://github.com/ChristopherElgin/SonicBuilderSupersonic#readme
    Source = https://github.com/ChristopherElgin/SonicBuilderSupersonic
    Tracker = https://github.com/ChristopherElgin/SonicBuilderSupersonic/issues
keywords = Chevy, Sonic, DSP, Builder, Android Head Unit, Traceable
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Build Tools

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    reportlab==4.1.0
    pikepdf==9.2.1
    segno==1.6.1
    qrcode[pil]==7.4.2
    Pillow==10.4.0
    requests==2.32.3
    urllib3==2.5.0
    PyGithub==2.5.0
    jsonschema==4.23.0
    platformdirs==4.3.2

[options.package_data]
* = *.pdf, *.json, *.md, *.zip
